// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChemicalFormula handles empty formula string 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#FAFAFA",
        "fontWeight": "800",
      },
      {
        "fontSize": 26,
      },
    ]
  }
/>
`;

exports[`ChemicalFormula matches snapshot 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#FAFAFA",
        "fontWeight": "800",
      },
      {
        "fontSize": 26,
      },
    ]
  }
>
  H₂O
</Text>
`;
